[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Dialog/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Menus/theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 291, 26 ), Vector2( 291, 30 ), Vector2( 291, 26 ) ]
}

[node name="Dialog" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialogBox" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -88.0
margin_right = 208.0
margin_bottom = -8.0
theme = ExtResource( 2 )
color = Color( 0.0784314, 0.0627451, 0.219608, 0.972549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
margin_left = 90.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = 26.0
mouse_filter = 1
custom_styles/normal = SubResource( 1 )
text = "Peach"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 98.0
margin_top = 25.0
margin_right = -20.0
custom_styles/normal = SubResource( 2 )
text = "Eipstein didn't unalive himself."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="DialogBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -80.0
margin_right = -128.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="Polygon2D" parent="DialogBox"]
position = Vector2( 291, 26 )
scale = Vector2( 0.335932, 0.569563 )
polygon = PoolVector2Array( 304, 64, 320, 80, 336, 64 )

[node name="UseLabel" type="Label" parent="DialogBox/Indicator"]
visible = false
margin_left = 296.641
margin_top = 29.1241
margin_right = 313.641
margin_bottom = 51.1241
rect_scale = Vector2( 3, 2 )
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/Indicator"]
autoplay = "Animate"
anims/Animate = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="CanSkip" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Voice" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
